# PROJETO-IA-PARA-CURRICULOS

./: Authenticate  README-en.md  README-ptbr.md  README.md  ai.py  analise.py  app.py  create_job.py  database.py  db.json  download_cv.py  helper.py  main.py  pyproject.toml
models/: analysis.py  file.py  jobs.py  resums.py
