[project]
name = "projeto-ia-para-curriculos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-groq>=0.3.7",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
    "streamlit-aggrid==1.1.7",
    "tinydb>=4.8.2",
]

[tool.uv.workspace]
members = [
    "projeto-ia-para-curriculos",
]
